# AX9000

./: README.md
openwrt/: .config.AX9000  rules.mk
openwrt/config/: Config-images.in  Config-kernel.in
openwrt/dl/: backports-20200902_001-4.4.60-931c337125.tar.bz2  cgi-io-2020-10-27-ab4c3471.tar.xz  curl-7.76.0.tar.xz  dnsmasq-2.82.tar.xz  firewall-2020-09-05-8c2f9fad.tar.xz  firmware-5.bin_10.2.4-1.0-00029  firmware-5.bin_10.4-3.4-00082  hostapd-2020-10-14.tar.bz2  iproute2-5.10.0.tar.xz  iptables-1.8.6.tar.bz2  iw-5.8.tar.xz  iw-5.9.tar.xz  libgcrypt-1.8.7.tar.bz2  libgpg-error-1.39.tar.bz2  libiwinfo-2021-01-06-23d2722b.tar.xz  libubox-2020-12-12-35787769.tar.xz  mcproxy-2017-08-24-93b5ace42268160ebbfff4c61818fb15fa2d9b99.tar.bz2  nat46-6.tar.xz  netifd-2021-01-09-c00c8335.tar.xz  odhcpd-2021-01-03-3bda9007.tar.xz  patchelf-0.10.tar.bz2  procd-2020-12-12-7f12c89d.tar.xz  rpcd-2021-01-06-ea7f4717.tar.xz  sysstat-12.4.3.tar.xz  ubus-2020-12-04-d1d9ddf9.tar.xz  uclient-2020-12-10-2c843b2b.tar.xz  uhttpd-2020-11-23-f53a6399.tar.xz  wireless-regdb-2020.11.20.tar.xz
openwrt/feeds/: adsprpc  adsprpc.index  adsprpc.targetindex  alljoyn  alljoyn.index  apple_homekit  (+183 more)
openwrt/qca/src/common-tools/cnssdiag/: Android.mk  Makefile.am  cld-diag-parser.c  cld-diag-parser.h  cld-fwlog-netlink.c  nan-parser.c  parser.c
openwrt/qca/src/qca-qmi-framework/qrtr/: Android.mk  Makefile  Makefile.am  NOTICE  start_qrtr_ns
openwrt/qca/src/qca-qmi-framework/qrtr/lib/: libqrtr.c  libqrtr.h
openwrt/qca/src/qca-qmi-framework/qrtr/src/: cfg.c  lookup.c  map.c  ns.c  ns.h  waiter.c
(+1195 files in other folders)
